--- a/index.html
+++ b/index.html
@@ -1168,7 +1168,7 @@
                                     <p class="form-message"></p>
                                     <div class="col-lg-12">
                                         <div class="single-form form-group">
-                                            <button class="main-btn" type="submit">Submit</button>
+                                            <button class="main-btn" type="button">Submit</button>
                                         </div> <!-- single form -->
                                     </div>
                                 </div> <!-- row -->
